fix space on mobile

--- a/src/blocks/modules/index/index.scss
+++ b/src/blocks/modules/index/index.scss
@@ -1,13 +1,14 @@
 .index {
     width: 100vw;
-    height: 100vh;
+    height: 98vh;
 
     &__container {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         align-items: center;
+        justify-content: space-between;
         height: 100%;
+        padding: 0 20px;
     }
 
     &__header {
@@ -67,11 +68,12 @@
 
     &__links {
         display: flex;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
 
         @media (max-width:767px) {
-            margin-bottom: 20px;
+            // margin-bottom: 20px;
+            // padding: 0 20px;
             justify-content: space-between;
             width: 100%;
         }
@@ -87,9 +89,9 @@
 
         &--link {
             .icon {
+                @include transition($transition);
                 width: 40px;
                 height: 40px;
-                @include transition($transition);
 
                 &:hover {
                     opacity: .76;
